# theodo-exercise

./: README.md  drug.py  drugs.py  hokla.py  main.py  oldhokla.py  pyproject.toml
hokla/: __init__.py  base_drug.py  drug.py  drugs.py  inventory.py
